# AlphaField

./: .dockerignore  .gitignore  .opencode  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PHASE12_SUMMARY.md  README.md  debug_rsi_test.rs  docker-compose.yml
.cargo/: config.toml
.code_index/: indexed_codebases.json
.code_index/AlphaField/: indexed_codebases.json
.container-use/: environment.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  self-healing.yml
.zed/: instructions.md
crates/backtest/: Cargo.toml  README.md
crates/backtest/examples/: buy_and_hold.rs  golden_cross_backtest.rs  multi_strategy_backtest.rs
crates/backtest/src/: adapter.rs  asset_sentiment.rs  benchmark.rs  bot_strategies.rs  correlation.rs  drawdown.rs  engine.rs  error.rs  exchange.rs  journal.rs  lib.rs  metrics.rs  monte_carlo.rs  multi_strategy_engine.rs  optimization_workflow.rs  optimizer.rs  portfolio.rs  reports.rs  rolling_stats.rs  sensitivity.rs  strategy.rs  tax.rs  trade.rs  walk_forward.rs
crates/backtest/src/ml/: data_split.rs  ensemble.rs  features.rs  mod.rs  models.rs  normalization.rs  storage.rs  strategy.rs  validation.rs
crates/backtest/src/portfolio_optimization/: constraints.rs  mod.rs  objectives.rs  optimizer.rs
crates/backtest/src/portfolio_optimization/algorithms/: inverse_volatility.rs  mean_variance.rs  mod.rs  risk_parity.rs
crates/backtest/src/portfolio_validation/: mod.rs  monte_carlo.rs  sensitivity.rs  stress_test.rs  walk_forward.rs
crates/backtest/src/position_sizing/: kelly.rs  mod.rs  volatility_adjusted.rs
crates/backtest/src/validation/: mod.rs  regime.rs  regime_testing.rs  robustness.rs  scoring.rs  statistical_significance.rs  temporal.rs  validator.rs
crates/backtest/tests/: auto_optimize_strategy_support_test.rs  debug_optimization.rs  dynamic_auto_optimize_test.rs  optimization_workflow_tests.rs  shorting_tests.rs  test_optimization_fix.rs  test_optimization_fixes.rs
crates/backtest/tests/integration/: validation_pipeline.rs
crates/core/: Cargo.toml  README.md
crates/dashboard/: Cargo.toml  README.md
crates/dashboard/src/: analysis_api.rs  api.rs  backtest_api.rs  bots_api.rs  chart_api.rs  data_api.rs  lib.rs  ml_api.rs  mock_data.rs  orders_api.rs  quality_api.rs  reports_api.rs  sentiment_api.rs  server.rs  strategies_api.rs  websocket.rs
crates/dashboard/src/services/: data_service.rs  mod.rs  strategy_service.rs
crates/dashboard/static/: app.js  index.html  style.css
crates/dashboard/static/components/: backtest-tab.html  build-tab.html  deploy-tab.html  navigation.html  optimize-tab.html
crates/dashboard/tests/: strategies_api_integration_test.rs
crates/data/: Cargo.toml  README.md
crates/data/src/: database.rs  gap_filler.rs  ingestion_monitor.rs  lib.rs  pipeline.rs  sentiment.rs  storage.rs
crates/execution/: Cargo.toml  README.md
crates/execution/src/: lib.rs  orders.rs  risk.rs
crates/execution/src/bots/: dca.rs  grid.rs  mod.rs  trailing.rs
crates/execution/src/clients/: binance.rs  mod.rs  paper.rs
crates/strategy/: Cargo.toml  README.md
crates/strategy/src/: baseline.rs  config.rs  framework.rs  indicators.rs  lib.rs  strategies.rs
crates/strategy/src/strategies/: golden_cross.rs  mean_reversion.rs  mod.rs  momentum.rs  rsi.rs
crates/strategy/src/strategies/mean_reversion/: bollinger_bands.rs  keltner_reversion.rs  mod.rs  price_channel.rs  rsi_reversion.rs  stat_arb.rs  stoch_reversion.rs  zscore_reversion.rs
crates/strategy/src/strategies/momentum/: adx_trend.rs  macd_strategy.rs  mod.rs  momentum_factor.rs  multi_tf_momentum.rs  roc_strategy.rs  rsi_momentum.rs  volume_momentum.rs
crates/strategy/src/strategies/multi_indicator/: adaptive_combo.rs  confidence_weighted.rs  ensemble_weighted.rs  macd_rsi_combo.rs  ml_enhanced.rs  mod.rs  regime_switching.rs  trend_mean_rev.rs
crates/strategy/src/strategies/sentiment/: divergence_strategy.rs  mod.rs  regime_sentiment.rs  sentiment_momentum.rs
crates/strategy/src/strategies/trend_following/: adaptive_ma.rs  breakout.rs  golden_cross.rs  ma_crossover.rs  macd_trend.rs  mod.rs  parabolic_sar.rs  triple_ma.rs
crates/strategy/src/strategies/volatility/: atr_breakout.rs  atr_trailing.rs  garch_strategy.rs  mod.rs  vix_style.rs  vol_regime.rs  vol_sizing.rs  vol_squeeze.rs
crates/strategy/src/testing/: data_generators.rs  harness.rs  mod.rs
crates/strategy/tests/: indicator_tests.rs  integration_tests.rs  strategy_tests.rs
doc/: api.md  architecture.md  bots_guide.md  detailed_design.md  optimization_workflow.md  phase12_charting.md  project_plan.md  quickstart.md  roadmap.md  trading_modes.md  trading_modes_implementation_plan.md
doc/phase-13-summary/: implementation-summary.md  quick-reference.md  user-guide.md
doc/phase_12/: 12.1_completion_summary.md  12.1_summary.md  12.2_progress_summary.md  12.2_summary.md  12.3_summary.md  12.4_summary.md  12.5_summary.md  12.6_summary.md  12.7_summary.md  12.8_summary.md  phase_12_plan.md  plan.md  strategy_template.md  validation_guide.md
doc/refactoring/: scoring_and_validation_refactor.md
doc/runbooks/: daily-reconciliation.md  incident-response.md
doc/ui/: strategy_selection.md
doc/validation/: README.md
examples/: verify_optimization_fix.rs
migrations/: 001_strategies.sql  003_failures.sql
migrations/phase_12/: 002_performance.sql  003_failures.sql
scripts/: Cargo.toml  README.md  reset_database.py  run_migrations.bat  run_migrations.py  run_migrations.rs  run_migrations.sh
thoughts/audit/: implementation_status.md  parameter_audit_log.md  warning_inventory.md
thoughts/plans/: strategy_audit_optimization_backtest.md  strategy_audit_testing_ci_implementation.md
thoughts/research/: 2026-02-01_strategy_audit_optimization_backtest.md  2026-02-01_strategy_audit_testing_ci_research.md
thoughts/reviews/: strategy_audit_optimization_backtest_review.md  strategy_audit_testing_ci_implementation_review.md
thoughts/tickets/: debt_strategy_audit_followup_ci_compliance.md  (+2 more)
validation/: strategies_batch.txt
(+184 files in other folders)
