[workspace]
members = [
    "crates/core",
    "crates/data",
    "crates/strategy",
    "crates/backtest",
    "crates/execution",
    "crates/dashboard",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
nalgebra = "0.33"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
