[package]
name = "alphafield-backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
alphafield-core = { path = "../core" }
alphafield-strategy = { path = "../strategy" }
alphafield-data = { path = "../data" }
alphafield-execution = { path = "../execution" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
rand = "0.8"
rand_chacha = "0.3"
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
