[package]
name = "alphafield-backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
alphafield-core = { path = "../core" }
alphafield-strategy = { path = "../strategy" }
alphafield-data = { path = "../data" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
rand = "0.8"
rand_chacha = "0.3"
ndarray = "0.15"
statrs = "0.16"
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
lazy_static = "1.5.0"

[[bin]]
name = "validate_strategy"
path = "src/bin/validate_strategy.rs"
