[package]
name = "alphafield-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard_server"
path = "src/bin/dashboard_server.rs"

[dependencies]
alphafield-core = { path = "../core" }
alphafield-execution = { path = "../execution" }
axum = "0.7"
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
