[package]
name = "alphafield-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard_server"
path = "src/bin/dashboard_server.rs"

[dependencies]
alphafield-core = { path = "../core" }
alphafield-execution = { path = "../execution" }
alphafield-backtest = { path = "../backtest" }
alphafield-strategy = { path = "../strategy" }
alphafield-data = { path = "../data" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
dotenvy = "0.15"
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
