[package]
name = "alphafield-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
alphafield-core = { path = "../core" }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { workspace = true }
log = "0.4"
