[package]
name = "alphafield-strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
alphafield-core = { path = "../core" }
alphafield-data = { path = "../data" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dotenvy = "0.15"
chrono = { workspace = true }
rand = "0.8"
